<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="pt.lisomatrix.safevault.ui.login.LoginViewModel" />
    </data>

<FrameLayout
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/accountLabel"
        style="@style/InputLabelTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"

        android:text="@string/account_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/accountIDText"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        style="@style/InputTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/accountLabel"
        app:layout_constraintTop_toBottomOf="@+id/accountLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        style="@style/InputLabelTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountIDText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordText"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        style="@style/InputTheme"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <TextView
        android:id="@+id/errorLabel"
        android:visibility="invisible"
        android:text="@string/login_error_message"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        style="@style/PrimaryButtonTheme"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="@id/registerTv"
        app:layout_constraintEnd_toEndOf="@id/passwordText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordText" />

    <TextView
        android:id="@+id/registerTv"
        style="@style/InputLabelTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>