<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/accountContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:elevation="12dp"
            android:shadowDy="6"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/primary_button_background"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </View>

        <TextView
            android:id="@+id/textView2"
            style="@style/WelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/account_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/keep_it_safe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />




        <TextView
            android:id="@+id/accountIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:elevation="20dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/accountContainer"
            app:layout_constraintStart_toStartOf="@id/accountContainer"
            app:layout_constraintTop_toTopOf="@id/accountContainer" />

        <ImageButton
            android:id="@+id/btnCopy"
            android:elevation="20dp"
            android:background="@android:color/transparent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="?attr/actionModeCopyDrawable"
            app:layout_constraintBottom_toBottomOf="@id/accountContainer"
            app:layout_constraintEnd_toEndOf="@id/accountContainer"
            app:layout_constraintTop_toTopOf="@id/accountContainer" />

        <View

            android:elevation="20dp"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/btnCopy"
            app:layout_constraintTop_toTopOf="@id/accountContainer" />

        <TextView
            android:id="@+id/continueTxt"
            style="@style/BottomButton"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>