<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="pt.lisomatrix.safevault.ui.register.RegisterViewModel" />
    </data>

    <FrameLayout
        android:background="@drawable/background_gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:translationZ="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_icon"
                tools:srcCompat="@drawable/back_icon" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/passwordLabel"
                style="@style/InputLabelTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"

                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                style="@style/InputTheme"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/passwordLabel"
                app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

            <TextView
                android:id="@+id/repasswordLabel"
                style="@style/InputLabelTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/repeat_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repasswordText"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                style="@style/InputTheme"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/repasswordLabel"
                app:layout_constraintTop_toBottomOf="@+id/repasswordLabel" />

            <Button
                android:id="@+id/registerBtn"
                style="@style/PrimaryButtonTheme"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="110dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/repasswordText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/repasswordText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>